<resources>

    <string name="app_name">SustainaBite</string>
    <string name="create_account_title">Create your\nConservaBite Account</string>
    <string name="create_account_subtitle">ConservaBite helps you reduce food waste by tracking\nexpiration dates and suggesting smart recipes.</string>
    <string name="tagline">“A Smarter Way to Bite Sustainably”</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>

    <string name="create_account">Create an Account</string>
    <string name="username">Username *</string>
    <string name="hint_username">Enter username</string>
    <string name="email">Email *</string>
    <string name="hint_email">Enter email address</string>
    <string name="profilePicture">Profile Picture *</string>
    <string name="hint_picture">Attach Image</string>
    <string name="password">Password *</string>
    <string name="logout">Logout</string>
    <string name="hint_password">*****</string>
    <string name="confirmPassword">Confirm Password *</string>
    <string name="hint_cpassword">l3m0n</string>
    <string name="loginHere">Already have an account? LogIn here.</string>

    <string name="welcome_back">Welcome Back!</string>
    <string name="registerHere">Don’t have an account yet? Register here.</string>
    <string name="rememberMe">Remember Me</string>

    <string name="congratulations_title">Congratulations!\nWelcome to ConservaBite</string>
    <string name="congratulations_subtitle">We’re excited to have you! Track your food, reduce waste,\nand cook smarter with ConservaBite.</string>
    <string name="continueText">Continue</string>

    <string name="home">Home</string>
    <string name="food">Food</string>
    <string name="community">Community</string>
    <string name="profile">Profile</string>

    <string name="my_recipes">My Recipes</string>
    <string name="edit">Edit Profile</string>
    <string name="save">Save Changes</string>
    <string name="hint_username2">_gracieabrams</string>
    <string name="hint_email2">gracieabrams@gmail.com</string>
    <string name="sample_username">\@_gracieabrams</string>
    <string name="sample_email">gracieabrams@gmail.com</string>
    <string name="recipe1">Fried Rice</string>
    <string name="recipe2">Spinach Omelette</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients1">Rice, eggs, vegetables, soy sauce, garlic, oil</string>
    <string name="ingredients2">Eggs, spinach, cheese, salt, pepper</string>
    <string name="procedures">Procedures</string>
    <string name="procedures1">
    • Sauté garlic in oil.\n
    • Add veggies and stir-fry.\n
    • Push aside, scramble eggs, then mix.\n
    • Add rice, soy sauce, stir well.
    </string>
    <string name="procedures2">
    • Whisk eggs, season with salt and pepper.\n
    • Cook spinach, pour eggs, and add cheese.\n
    • Fold and serve.
    </string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="edit_entry">Edit entry</string>
    <string name="save_changes">Save changes</string>
    <string name="quantity">Quantity</string>
    <string name="remarks">Remarks</string>
    <string name="date_of_expiry">Date of Expiry</string>
    <string name="date_of_input">Date of Input</string>
    <string name="name">Name</string>
    <string name="add_entry">Add entry</string>
    <string name="place_of_storage">Place of storage</string>
    <string name="share_details_about_the_items">Share details about the items.</string>
    <string name="save_input">Save</string>
    <string name="_3_pcs">3 pcs</string>
    <string name="item_name">Item Name</string>
    <string name="input_date_01_01_2025">01/01/2025</string>
    <string name="expiry_01_02_2025">Exp: 01/02/2025</string>
    <string name="add_entry_"><![CDATA[< Add entry]]></string>
    <string name="pantry">Pantry</string>
    <string name="pantry_">Pantry</string>
    <string name="sort_"><![CDATA[< Sort]]></string>
    <string name="show_results">Show results</string>
    <string name="expiry_tag">Expiry Tag</string>
    <string name="edit_entry_"><![CDATA[< Edit entry]]></string>
    <string name="back_button"><![CDATA[<]]></string>
    <string name="edit_entry___"><![CDATA[< Edit entry]]></string>

    <string-array name="storage">
        <item>Pantry</item>
        <item>Refrigerator</item>
        <item>Freezer</item>
        <item>Cupboard</item>
        <item>Dry Place</item>
        <item>Countertop</item>
    </string-array>

    <string-array name="quantity">
        <item>pc</item>
        <item>g</item>
        <item>kg</item>
        <item>oz</item>
        <item>L</item>
        <item>ml</item>
    </string-array>

</resources>
