<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">

    <FrameLayout
        android:id="@+id/headerImageFrame"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/rounded_bottom_corners"
        android:clipToOutline="true"
        android:outlineProvider="background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/yellow_bg" />

    </FrameLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cardCornerRadius="100dp"
        app:strokeColor="#417B49"
        app:strokeWidth="4dp"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sampleUsername">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/sample_profile" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/sampleUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/sample_username"
        android:textColor="#E16162"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/sampleEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sampleEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:lineSpacingExtra="0sp"
        android:text="@string/sample_email"
        android:textColor="#000000"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/roundedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/roundedButton"
        android:layout_width="140dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/green_rounded_button"
        android:fontFamily="@font/poppins_semibold"
        android:onClick="goSave"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="11sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="370dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/white_rounded_box"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toTopOf="@+id/menuBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="13dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/username"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="username"
            android:background="@drawable/white_textbox"
            android:hint="@string/hint_username2"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextUsername" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/white_textbox"
            android:hint="@string/hint_email2"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/password"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editProfile" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="password"
            android:background="@drawable/white_textbox"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/confirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:lineSpacingExtra="0sp"
            android:text="@string/confirmPassword"
            android:textColor="#000000"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPassword" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:autofillHints="password"
            android:background="@drawable/white_textbox"
            android:hint="@string/hint_cpassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#000000"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
    </LinearLayout>

    <!-- Menu Bar -->

    <View
        android:id="@+id/menuBar"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:background="@drawable/menu_bar_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Icons and Text inside the Menu Bar -->
    <LinearLayout
        android:id="@+id/menuLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        android:baselineAligned="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/menuBar">

        <!-- Home Icon and Text -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="goHome">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/home_icon"
                android:contentDescription="@string/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textColor="#417B49"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/circle_whitedot" />
        </LinearLayout>

        <!-- Food Icon and Text -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="goFood">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/food_icon"
                android:contentDescription="@string/food" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#417B49"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/circle_whitedot" />
        </LinearLayout>

        <!-- Community Icon and Text -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="goCommunity">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/community_icon"
                android:contentDescription="@string/community" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#417B49"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/circle_whitedot" />
        </LinearLayout>

        <!-- Profile Icon and Text -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:onClick="goProfile">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/profile_icon"
                android:contentDescription="@string/profile" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#417B49"
                android:textSize="12sp"
                android:textAlignment="center"/>

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/circle_greendot" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
